--- a/site/index.html
+++ b/site/index.html
@@ -5,24 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="../style/index.css" type="text/css">
+
 </head>
 <body>
     <div class="sidebar">
         <div class="wallet-status">
-            <img src="" alt="">
+            <div class="circle">
+                <img src="../icon/wallet-2.svg" alt="">
+            </div>
             <div class="wallet-status-text">
                 <h2>Wallet balance</h2>
-                <h3>$230,000,000.00</h3>
+                <h3>$ 230,000,000.00</h3>
             </div>
         </div>
         <hr />
         <div class="first-sidebar-menu">
-            <input type="search">
+            <input type="search" placeholder="Search">
+            <ul>
+                <li><img src="" alt=""> Dashboard</li>
+                <li><img src="" alt=""> Orders</li>
+                <li><img src="" alt=""> Wallet</li>
+                <li><img src="" alt=""> Messages</li>
+                <li><img src="" alt=""> Inbox</li>
+            </ul>
         </div>
         <hr />
         <div class="second-sidebar-menu">
-
+            <ul>
+                <li><img src="" alt="">News</li>
+                <li><img src="" alt="">Settings</li>
+                <li><img src="" alt="">Logout</li>
+            </ul>
         </div>
     </div>
     <div class="dashboard">
