--- a/site/index.html
+++ b/site/index.html
@@ -6,40 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style/index.css" type="text/css">
-
 </head>
 <body>
     <div class="sidebar">
-        <div class="wallet-status">
-            <div class="circle">
-                <img src="../icon/wallet-2.svg" alt="">
-            </div>
-            <div class="wallet-status-text">
-                <h2>Wallet balance</h2>
-                <h3>$ 230,000,000.00</h3>
+        <div class="sidebar__walletstatus">
+            <img class="sidebar__walletstatus__img" src="" alt="">
+            <div class="sidebar__walletstatus__text">
+                <h2>Wallet status</h2>
+                <h3>$230,000,000.00</h3>
             </div>
         </div>
-        <hr />
-        <div class="first-sidebar-menu">
-            <input type="search" placeholder="Search">
-            <ul>
-                <li><img src="" alt=""> Dashboard</li>
-                <li><img src="" alt=""> Orders</li>
-                <li><img src="" alt=""> Wallet</li>
-                <li><img src="" alt=""> Messages</li>
-                <li><img src="" alt=""> Inbox</li>
-            </ul>
+        <hr class="sidebar_firstline" />
+        <div class="sidebar__search">
+            <img class="sidebar__search__img" src="" alt="">
+            <input class="sidebar__search_submit" type="search" placeholder="Search">
         </div>
-        <hr />
-        <div class="second-sidebar-menu">
-            <ul>
-                <li><img src="" alt="">News</li>
-                <li><img src="" alt="">Settings</li>
-                <li><img src="" alt="">Logout</li>
-            </ul>
-        </div>
+        <ul class="sidebar__menu">
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Orders</a></li>
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Wallet</a></li>
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Messages</a></li>
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Inbox</a></li>
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Dashboard</a></li>
+        </ul>
+        <hr class="sidebar__secondline" />
+        <ul class="sidebar__menu">
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">News</a></li>
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Settings</a></li>
+            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Logout</a></li>
+        </ul>
     </div>
-    <div class="dashboard">
+    <div class="mainbody">
 
     </div>
 </body>
