--- a/site/index.html
+++ b/site/index.html
@@ -18,11 +18,11 @@
         </div>
         <hr class="sidebar_firstline" />
         <div class="sidebar__search">
-            <img class="sidebar__search__img" src="" alt="">
+            <img class="sidebar__search__img" src="../icon/search.svg" alt="">
             <input class="sidebar__search_submit" type="search" placeholder="Search">
         </div>
         <ul class="sidebar__menu">
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Orders</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--choose"><img class="sidebar__menu__item__img" src="../icon/dashboard.svg" alt=""><a class="sidebar__menu__item__text" href="#">Orders</a></li>
             <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Wallet</a></li>
             <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Messages</a></li>
             <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Inbox</a></li>
