--- a/site/index.html
+++ b/site/index.html
@@ -12,11 +12,11 @@
         <div class="sidebar__walletstatus">
             <img class="sidebar__walletstatus__img" src="" alt="">
             <div class="sidebar__walletstatus__text">
-                <h2>Wallet status</h2>
-                <h3>$230,000,000.00</h3>
+                <h2 class="sidebar__walletstatus__text__detail sidebar__walletstatus__text__detail--grey">Wallet status</h2>
+                <h3 class="sidebar__walletstatus__text__detail sidebar__walletstatus__text__detail--white">$230,000,000.00</h3>
             </div>
         </div>
-        <hr class="sidebar_firstline" />
+        <hr class="sidebar__line sidebar__line--hundred" />
         <div class="sidebar__search">
             <img class="sidebar__search__img" src="../icon/search.svg" alt="">
             <input class="sidebar__search_submit" type="search" placeholder="Search">
@@ -28,7 +28,7 @@
             <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Inbox</a></li>
             <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Dashboard</a></li>
         </ul>
-        <hr class="sidebar__secondline" />
+        <hr class="sidebar__line sidebar__line--seventeen" />
         <ul class="sidebar__menu">
             <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">News</a></li>
             <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Settings</a></li>
