--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="sidebar">
         <div class="sidebar__walletstatus">
-            <img class="sidebar__walletstatus__img" src="" alt="">
+            <img class="sidebar__walletstatus__img" src="../icon/wallet-status.svg" alt="">
             <div class="sidebar__walletstatus__text">
                 <h2 class="sidebar__walletstatus__text__detail sidebar__walletstatus__text__detail--grey">Wallet status</h2>
                 <h3 class="sidebar__walletstatus__text__detail sidebar__walletstatus__text__detail--white">$230,000,000.00</h3>
@@ -22,17 +22,17 @@
             <input class="sidebar__search_submit" type="search" placeholder="Search">
         </div>
         <ul class="sidebar__menu">
-            <li class="sidebar__menu__item sidebar__menu__item--choose"><img class="sidebar__menu__item__img" src="../icon/dashboard.svg" alt=""><a class="sidebar__menu__item__text" href="#">Orders</a></li>
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Wallet</a></li>
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Messages</a></li>
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Inbox</a></li>
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Dashboard</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--choose"><img class="sidebar__menu__item__img" src="../icon/dashboard.svg" alt=""><a class="sidebar__menu__item__text" href="#">Dashboard</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/orders.svg" alt=""><a class="sidebar__menu__item__text" href="#">Orders</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/wallet-menu.svg" alt=""><a class="sidebar__menu__item__text" href="#">Wallet</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/messages.svg" alt=""><a class="sidebar__menu__item__text" href="#">Messages</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/inbox.svg" alt=""><a class="sidebar__menu__item__text" href="#">Inbox</a></li>
         </ul>
         <hr class="sidebar__line sidebar__line--seventeen" />
         <ul class="sidebar__menu">
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">News</a></li>
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Settings</a></li>
-            <li class="sidebar__menu__item"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Logout</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">News</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Settings</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--nochoose sidebar__menu__item--bottom"><img class="sidebar__menu__item__img" src="#" alt=""><a class="sidebar__menu__item__text" href="#">Logout</a></li>
         </ul>
     </div>
     <div class="mainbody">
