--- a/site/index.html
+++ b/site/index.html
@@ -29,10 +29,10 @@
             <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/inbox.svg" alt=""><a class="sidebar__menu__item__text" href="#">Inbox</a></li>
         </ul>
         <hr class="sidebar__line sidebar__line--seventeen" />
-        <ul class="sidebar__menu2">
-            <li class="sidebar__menu2__item sidebar__menu2__item--nochoose"><img class="sidebar__menu2__item__img" src="#" alt=""><a class="sidebar__menu2__item__text" href="#">News</a></li>
-            <li class="sidebar__menu2__item sidebar__menu2__item--nochoose"><img class="sidebar__menu2__item__img" src="#" alt=""><a class="sidebar__menu2__item__text" href="#">Settings</a></li>
-            <li class="sidebar__menu2__item sidebar__menu2__item--nochoose sidebar__menu2__item--bottom"><img class="sidebar__menu2__item__img" src="#" alt=""><a class="sidebar__menu2__item__text" href="#">Logout</a></li>
+        <ul class="sidebar__menu">
+            <li class="sidebar__menu__item sidebar__menu__item--resize sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/news.svg" alt=""><a class="sidebar__menu__item__text" href="#">News</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--resize sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/settings.svg" alt=""><a class="sidebar__menu__item__text" href="#">Settings</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--resize sidebar__menu__item--nochoose sidebar__menu__item--bottom"><img class="sidebar__menu__item__img" src="../icon/logout.svg" alt=""><a class="sidebar__menu__item__text" href="#">Logout</a></li>
         </ul>
     </div>
     <div class="mainbody">
