--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,7 @@
             <input class="sidebar__search_submit" type="search" placeholder="Search">
         </div>
         <ul class="sidebar__menu">
-            <li class="sidebar__menu__item sidebar__menu__item--choose"><img class="sidebar__menu__item__img" src="../icon/dashboard.svg" alt=""><a class="sidebar__menu__item__text" href="#">Dashboard</a></li>
+            <li class="sidebar__menu__item sidebar__menu__item--choose"><img class="sidebar__menu__item__img" src="../icon/dashboard.svg" alt=""><a class="sidebar__menu__item__text sidebar__menu__item__text--choose" href="#">Dashboard</a></li>
             <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/orders.svg" alt=""><a class="sidebar__menu__item__text" href="#">Orders</a></li>
             <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/wallet-menu.svg" alt=""><a class="sidebar__menu__item__text" href="#">Wallet</a></li>
             <li class="sidebar__menu__item sidebar__menu__item--nochoose"><img class="sidebar__menu__item__img" src="../icon/messages.svg" alt=""><a class="sidebar__menu__item__text" href="#">Messages</a></li>
