--- a/site/index.html
+++ b/site/index.html
@@ -36,7 +36,96 @@
         </ul>
     </div>
     <div class="mainbody">
+        <div class="mainbody__itempage">
+            <div class="mainbody__itempage__name">
+                <h1 class="mainbody__itempage__name__text">Dashboard</h1>
+            </div>
+            <div class="mainbody__itempage__nick">
+                <h2 class="mainbody__itempage__nick__text">J</h2>
+            </div>
+        </div>
+        <ul class="mainbody__menu">
+            <li>Transaction</li>
+            <li>Terminals</li>
+            <li>Agents</li>
+        </ul>
+        <div class="mainbody__menucontent">
+            <div class="mainbody__menucontent__showmetrics">
+                <div class="mainbody__menucontent__showmetrics__shownumbers">
+                    <div class="mainbody__menucontent__showmetrics__shownumbers__item">
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
 
+                        </div>
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
+                            <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Users</h6>
+                            <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">2,765</h1>
+                            <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mainbody__menucontent__showmetrics__shownumbers">
+                    <div class="mainbody__menucontent__showmetrics__shownumbers__item">
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
+
+                        </div>
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
+                            <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">New</h6>
+                            <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">253</h1>
+                            <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mainbody__menucontent__showmetrics__shownumbers">
+                    <div class="mainbody__menucontent__showmetrics__shownumbers__item">
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
+
+                        </div>
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
+                            <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Average</h6>
+                            <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">896</h1>
+                            <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mainbody__menucontent__showmetrics__shownumbers">
+                    <div class="mainbody__menucontent__showmetrics__shownumbers__item">
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
+
+                        </div>
+                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
+                            <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Total</h6>
+                            <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">253</h1>
+                            <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mainbody__menucontent__showmetrics__showchart">
+
+                </div>
+            </div>
+            <div class="mainbody__menucontent__comisionbalance">
+                <img src="" alt="">
+                <h5>Referal commission balance</h5>
+                <h1>N120,000,000</h1>
+                <button>Withdraw</button>
+                <div>
+                    <img src="" alt="">
+                    <h5>View commission history</h5>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
