fisrt part mainboard

--- a/site/index.html
+++ b/site/index.html
@@ -45,9 +45,9 @@
             </div>
         </div>
         <ul class="mainbody__menu">
-            <li>Transaction</li>
-            <li>Terminals</li>
-            <li>Agents</li>
+            <li class="mainbody__menu__item">Transaction</li>
+            <li class="mainbody__menu__item">Terminals</li>
+            <li class="mainbody__menu__item">Agents</li>
         </ul>
         <div class="mainbody__menucontent">
             <div class="mainbody__menucontent__showmetrics">
