--- a/site/index.html
+++ b/site/index.html
@@ -51,11 +51,9 @@
         </ul>
         <div class="mainbody__menucontent">
             <div class="mainbody__menucontent__showmetrics">
-                <div class="mainbody__menucontent__showmetrics__shownumbers">
+                <div class="mainbody__menucontent__showmetrics__showitmebar">
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
-
-                        </div>
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Users</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">2,765</h1>
@@ -65,12 +63,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="mainbody__menucontent__showmetrics__shownumbers">
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
-
-                        </div>
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">New</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">253</h1>
@@ -80,12 +74,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="mainbody__menucontent__showmetrics__shownumbers">
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
-
-                        </div>
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Average</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">896</h1>
@@ -95,12 +85,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="mainbody__menucontent__showmetrics__shownumbers">
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <div class="mainbody__menucontent__showmetrics__shownumbers__item__img">
-
-                        </div>
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Total</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">253</h1>
