thrid advance of the mainboard

--- a/site/index.html
+++ b/site/index.html
@@ -53,46 +53,49 @@
             <div class="mainbody__menucontent__showmetrics">
                 <div class="mainbody__menucontent__showmetrics__showitmebar">
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="../icon/user.svg" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Users</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">2,765</h1>
                             <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
-                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
-                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="../icon/dash-positive.svg" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number number--positive">%10</h6>
                             </div>
                         </div>
                     </div>
+                    <div class="line"></div>
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="../icon/dash-item.svg" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">New</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">253</h1>
                             <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
-                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
-                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="../icon/dash-negative.svg" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number number--negative">%10</h6>
                             </div>
                         </div>
                     </div>
+                    <div class="line"></div>
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="../icon/tag-item.svg" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Average</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">896</h1>
                             <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
-                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
-                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="../icon/dash-positive.svg" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number number--positive">%10</h6>
                             </div>
                         </div>
                     </div>
+                    <div class="line"></div>
                     <div class="mainbody__menucontent__showmetrics__shownumbers__item">
-                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="" alt="">
+                        <img class="mainbody__menucontent__showmetrics__shownumbers__item__img" src="../icon/wallet-item.svg" alt="">
                         <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts">
                             <h6 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__header">Total</h6>
                             <h1 class="mainbody__menucontent__showmetrics__shownumbers__item__texts__quantity">253</h1>
                             <div class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage">
-                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="" alt="">
-                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number">%10</h6>
+                                <img class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__img" src="../icon/dash-negative.svg" alt="">
+                                <h6  class="mainbody__menucontent__showmetrics__shownumbers__item__texts__percentage__number number--negative">%10</h6>
                             </div>
                         </div>
                     </div>
